syntax = "proto3";
package keyval;

service Value {
  rpc GetValue (GetValueRequest) returns (GetValueReply);
  rpc InsertKeyValue (InsertKeyValueRequest) returns (InsertKeyValueResponse);
}

message GetValueRequest {
 string key = 1;
}

message GetValueReply {
  string value = 1;
}

message InsertKeyValueRequest {
  string key = 1;
  string value = 2;
}

message InsertKeyValueResponse {
  string result = 1;
}